--- a/scss/components/_clocks.scss
+++ b/scss/components/_clocks.scss
@@ -212,12 +212,13 @@
     )
   );
 
+  /* KEYS */
   .clock-key-container {
     position: relative;
-    perspective: 1000px;
+    perspective: 500px;
     transform-style: preserve-3d;
 
-    * { perspective: 1000px; transform-style: preserve-3d; }
+    * { perspective: 500px; transform-style: preserve-3d; }
 
     // background: rgba(255, 0, 255, 0.25);
     // outline: 2px dotted rgb(255, 0, 255);
@@ -280,6 +281,8 @@
         left: 0;
         position: absolute;
 
+        // background: rgba(255, 255, 0, 0.25);
+        // outline: 2px dotted rgb(255, 255, 0);
         &:hover {
           color: var(--blades-gold-bright) !important;
         }
@@ -406,6 +409,10 @@
     }
   }
 
+  .clock-key[data-is-showing-controls="false"] {
+    .clock-controls { display: none !important; }
+  }
+
   /* CONTROLS */
   .clock-key-controls,
   .clock-controls {
@@ -427,7 +434,8 @@
 
     &.clock-key-controls {
       position: absolute;
-      top: 80%;
+      top: unset;
+      bottom: 20%;
       left: 50%;
       width: 80%;
       transform: translate(-50%, 0%);
