--- a/templates/components/consequence-accepted.hbs
+++ b/templates/components/consequence-accepted.hbs
@@ -1,4 +1,4 @@
-{{eLog "Consequence-Accepted Context" this}}
+{{eLog "Chat" "Consequence-Accepted Context" this}}
 <div class="comp consequence-display-container full-width consequence-accepted {{~#if (test type "==" "None")}} consequence-type-none{{/if}}{{~#if blockClass}} {{blockClass}}{{/if}}">
   {{#if (test type "==" "None")}}
   <div class="consequence-name-container">
