--- a/templates/actor-sheet.hbs
+++ b/templates/actor-sheet.hbs
@@ -1,3 +1,5 @@
+{{eLog "BladesActor" "Sheet Context" this}}
+
 <form class="{{cssClass}} actor-sheet" autocomplete="off">
 
   {{!-- Actor Img: Portrait & Background Overlay --}}
@@ -218,7 +220,7 @@
             <td class="harm-effect">{{{system.harm.severe.effect}}}</td>
             <td class="healing-clock" rowspan="3">
               {{#if healing_clock}}
-              {{> "systems/eunos-blades/templates/components/clock.hbs" healing_clock isShowingControls=false isGM=isGM}}
+              {{> "systems/eunos-blades/templates/overlay/clock-key.hbs" healing_clock}}
               {{/if}}
             </td>
             <td class="armor-uses" rowspan="3">
