--- a/templates/items/clock_keeper-sheet.hbs
+++ b/templates/items/clock_keeper-sheet.hbs
@@ -38,59 +38,11 @@
             </th>
           </thead>
           <tbody>
-            {{#each (lookup system.scenes system.targetScene) as |keyData keyID|}}
-            <tr>
-                <th class="black-white">
-                  {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
-                    isToggled=keyData.isVisible
-                    activeClass="fa-solid fa-eye"
-                    activeTooltip="<b>Key is Visible</b><br>Click to Hide"
-                    inactiveClass="fa-thin fa-eye"
-                    inactiveTooltip="<b>Key is Hidden</b><br>Click to Show"
-                    targetKey=(concat "system.clocksData.keys." keyID ".isVisible") }}
-                  {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
-                    isToggled=keyData.isActive
-                    activeClass="fa-solid fa-bell"
-                    activeTooltip="<b>Key is Focused</b><br>Click to Mute"
-                    inactiveClass="fa-regular fa-bell-slash"
-                    inactiveTooltip="<b>Key is Muted</b><br>Click to Focus"
-                    targetKey=(concat "system.clocksData.keys." keyID ".isActive") }}
-                  {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
-                    isToggled=keyData.isNameVisible
-                    activeClass="fa-solid fa-tag"
-                    activeTooltip="<b>Name is Visible</b><br>Click to Hide"
-                    inactiveClass="fa-thin fa-tag"
-                    inactiveTooltip="<b>Name is Hidden</b><br>Click to Show"
-                    targetKey=(concat "system.clocksData.keys." keyID ".isNameVisible") }}
-                </th>
-                <th class="black-white">
-                  <input type="text" class="key-input key-input-display" name="system.clock_keys.{{keyID}}.name" value="{{keyData.name}}">
-                </th>
-                <th class="black-white">
-                  {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-                    buttonClass="fa-regular fa-circle-plus"
-                    tooltip="<b>Add Clock</b>"
-                    action="add-clock"
-                    targetId=keyID
-                  }}
-                </th>
-                <th class="black-white">
-                  {{> "systems/eunos-blades/templates/components/button-icon.hbs"
-                    buttonClass="fa-solid fa-trash"
-                    tooltip="<b>Delete Key</b>"
-                    action="delete-key"
-                    targetId=keyID
-                  }}
-                </th>
-              </tr>
+            {{#each sceneKeys as |key keyID|}}
 
-              {{#each keyData.clocksData as |clockData clockID|}}
-              {{> "systems/eunos-blades/templates/parts/clock-sheet-row.hbs" clockData
-                keyID=../keyID
-                targetKeyPrefix=(concat "system.clocksData.keys." ../keyID ".clocksData." clockID)
-              }}
-              {{/each}}
-            </tr>
+            {{> "systems/eunos-blades/parts/clock-sheet-key.hbs" }}
+
+
             {{/each}}
           </tbody>
         </table>
