--- a/templates/overlay/blades-overlay.hbs
+++ b/templates/overlay/blades-overlay.hbs
@@ -33,8 +33,8 @@
 {{eLog "BLADES OVERLAY" this}}
 
 <div class="overlay-section overlay-section-clock-keys">
-  {{#each clockKeys}}
-    {{> "systems/eunos-blades/templates/overlay/clock-key.hbs"}}
+  {{#each sceneKeys}}
+    {{> "systems/eunos-blades/templates/components/clock-key.hbs"}}
   {{/each}}
 </div>
 
